--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -95,7 +95,8 @@
                 android:paddingBottom="@dimen/_10sdp"
                 android:textColor="@color/black"
                 android:textColorHint="@color/textSubTitle"
-                android:textSize="@dimen/_14ssp" />
+                android:textSize="@dimen/_14ssp"
+                android:inputType="phone"/>
 
             <!-- Gender Input Lyout -->
             <TextView
@@ -370,7 +371,8 @@
                 android:paddingBottom="@dimen/_10sdp"
                 android:textColor="@color/black"
                 android:textColorHint="@color/textSubTitle"
-                android:textSize="@dimen/_14ssp" />
+                android:textSize="@dimen/_14ssp"
+                android:inputType="textCapWords"/>
 
             <!-- Race Input Layout -->
             <TextView
