--- a/app/src/main/res/layout/row_info_profile.xml
+++ b/app/src/main/res/layout/row_info_profile.xml
@@ -77,7 +77,9 @@
             android:fontFamily="@font/darkergrotesque_semibold"
             android:text="Sunnyvale, CA"
             android:textColor="@color/textSubTitle"
-            android:textSize="@dimen/_16ssp" />
+            android:textSize="@dimen/_16ssp"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@id/textview_profession"/>
 
         <TextView
             android:id="@+id/textview_profession"
