--- a/app/src/main/res/layout/row_info_profile.xml
+++ b/app/src/main/res/layout/row_info_profile.xml
@@ -63,7 +63,7 @@
             android:textSize="@dimen/_14ssp" />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
@@ -72,7 +72,8 @@
 
         <TextView
             android:id="@+id/textview_location"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:fontFamily="@font/darkergrotesque_semibold"
             android:text="Sunnyvale, CA"
@@ -83,14 +84,15 @@
 
         <TextView
             android:id="@+id/textview_profession"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+            android:textAlignment="textEnd"
             android:fontFamily="@font/darkergrotesque_semibold"
             android:text="Product Designer"
             android:textColor="@color/textSubTitle"
             android:textSize="@dimen/_16ssp" />
-    </RelativeLayout>
+    </LinearLayout>
 
     <TableLayout
         android:layout_width="match_parent"
