--- a/app/src/main/res/layout/chatroom_placeholder.xml
+++ b/app/src/main/res/layout/chatroom_placeholder.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_marginBottom="@dimen/_10sdp"
     android:orientation="vertical">
     <LinearLayout
@@ -10,11 +10,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/image"
             android:layout_width="0dp"
             android:layout_height="@dimen/_70sdp"
             android:layout_weight="1"
-            android:src="@drawable/ic_photo_placeholder"/>
+            android:src="@drawable/elipse"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -26,18 +25,15 @@
                 android:id="@+id/name_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Jane Doe"
-                android:textColor="@color/black"
-                android:fontFamily="@font/ptsans_bold"
-                android:textSize="@dimen/_16ssp"/>
+                android:textSize="@dimen/_16ssp"
+                android:background="@color/placeholder_background"/>
             <TextView
                 android:id="@+id/last_message_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Hi Tanzeer, Glad we matched. Your prof..."
-                android:textColor="@color/black"
-                android:fontFamily="@font/ptsans_regular"
                 android:textSize="@dimen/_16ssp"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@color/placeholder_background"
                 android:maxLines="1"/>
         </LinearLayout>
     </LinearLayout>
