--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -55,6 +55,14 @@
             <include layout="@layout/chatroom_placeholder" />
 
             <include layout="@layout/chatroom_placeholder" />
+
+            <include layout="@layout/chatroom_placeholder" />
+
+            <include layout="@layout/chatroom_placeholder" />
+
+            <include layout="@layout/chatroom_placeholder" />
+
+            <include layout="@layout/chatroom_placeholder" />
         </LinearLayout>
     </com.facebook.shimmer.ShimmerFrameLayout>
 
