feat: Add two separate layouts for sent and received chat messages
feat: Show opposite allignments for sent and received chat messages

feat: integrate chat history api

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -48,7 +48,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/view"
-        android:layout_above="@id/layout_input_message"/>
+        android:layout_above="@id/layout_input_message"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"/>
 
     <EditText
         android:id="@+id/layout_input_message"
