--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -42,6 +43,44 @@
         android:layout_height="@dimen/_1sdp"
         android:layout_below="@id/layout_title"
         android:background="#1A000000" />
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_view_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/view"
+        android:layout_above="@id/layout_input_message"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        shimmer:duration="800">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/chat_sender_placeholder" />
+
+            <include layout="@layout/chat_own_placeholder" />
+
+            <include layout="@layout/chat_sender_placeholder" />
+
+            <include layout="@layout/chat_own_placeholder" />
+
+            <include layout="@layout/chat_own_placeholder" />
+
+            <include layout="@layout/chat_own_placeholder" />
+
+            <include layout="@layout/chat_sender_placeholder" />
+
+            <include layout="@layout/chat_sender_placeholder" />
+
+            <include layout="@layout/chat_own_placeholder" />
+
+            <include layout="@layout/chat_sender_placeholder" />
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
