--- a/app/src/main/res/layout/row_chat_message_own.xml
+++ b/app/src/main/res/layout/row_chat_message_own.xml
@@ -15,4 +15,15 @@
         android:textSize="@dimen/_14ssp"
         android:textColor="@color/black"
         android:fontFamily="@font/ptsans_regular"/>
+    <TextView
+        android:id="@+id/timestamp_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SAT at 8:15 PM"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_12ssp"
+        android:fontFamily="@font/darkergrotesque_regular"
+        android:layout_below="@id/textview_chat"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:visibility="gone"/>
 </RelativeLayout>
