--- a/app/src/main/res/layout/row_chat_message_sender.xml
+++ b/app/src/main/res/layout/row_chat_message_sender.xml
@@ -15,4 +15,16 @@
         android:textSize="@dimen/_14ssp"
         android:textColor="@color/white"
         android:fontFamily="@font/ptsans_regular"/>
+    <TextView
+        android:id="@+id/timestamp_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FRI at 11:23 PM"
+        android:textSize="@dimen/_12ssp"
+        android:textColor="@color/black"
+        android:fontFamily="@font/darkergrotesque_regular"
+        android:layout_below="@id/textview_chat"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:visibility="gone"/>
 </RelativeLayout>
