--- a/app/src/main/res/layout/row_chat_message_own.xml
+++ b/app/src/main/res/layout/row_chat_message_own.xml
@@ -3,7 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/_10sdp">
+    android:paddingTop="@dimen/_10sdp"
+    android:paddingBottom="@dimen/_10sdp"
+    android:paddingStart="@dimen/_20sdp"
+    android:paddingEnd="@dimen/_20sdp">
     <TextView
         android:id="@+id/textview_chat"
         android:layout_width="wrap_content"
