--- a/app/src/main/res/drawable/chat_sender_drawable.xml
+++ b/app/src/main/res/drawable/chat_sender_drawable.xml
@@ -1,15 +1,6 @@
-<ripple
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/white">
-    <item>
-        <shape
-            android:shape="rectangle" >
-            <corners android:radius="@dimen/_20sdp"/>
-            <gradient
-                android:endColor="#B42254"
-                android:centerColor="#B42254"
-                android:startColor="#FF6FA0"
-                android:type="linear"/>
-        </shape>
-    </item>
-</ripple>
+<?xml version="1.0" encoding="UTF-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <corners android:radius="@dimen/_20sdp"/>
+    <padding android:left="8dp" android:right="8dp" android:top="8dp" android:bottom="8dp"/>
+    <solid android:width="1dip" android:color="#E6E6E6" />
+</shape>
