--- a/app/src/main/res/layout/row_chat_message_sent.xml
+++ b/app/src/main/res/layout/row_chat_message_sent.xml
@@ -11,22 +11,23 @@
         android:id="@+id/textview_chat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_40sdp"
-        android:layout_alignParentStart="true"
+        android:layout_marginStart="@dimen/_40sdp"
+        android:layout_alignParentEnd="true"
         android:background="@drawable/chat_own_drawable"
         android:padding="@dimen/_10sdp"
         android:textSize="@dimen/_14ssp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:fontFamily="@font/ptsans_regular"/>
     <TextView
         android:id="@+id/timestamp_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SAT at 8:15 PM"
-        android:textColor="@color/black"
+        android:text="FRI at 11:23 PM"
         android:textSize="@dimen/_12ssp"
+        android:textColor="@color/black"
         android:fontFamily="@font/darkergrotesque_regular"
         android:layout_below="@id/textview_chat"
-        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="@dimen/_10sdp"
         android:visibility="gone"/>
 </RelativeLayout>
