feat: integrate new splash screen API

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,10 +15,23 @@
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
-    <style name="Theme.OHO.Launcher">
-        <item name="android:windowBackground">@drawable/splash</item>
-        <item name="android:windowSplashScreenBackground" tools:targetApi="s">@drawable/splash</item>
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <!-- Set the splash screen background, animated icon, and animation duration. -->
+        <item name="windowSplashScreenBackground">@color/white</item>
+
+        <!-- Use windowSplashScreenAnimatedIcon to add either a drawable or an
+             animated drawable. One of these is required. -->
+        <item name="windowSplashScreenAnimatedIcon">@id/none</item>
+
+        <!-- Set the theme of the Activity that directly follows your splash screen. -->
+        <!-- Required -->
+        <item name="postSplashScreenTheme">@style/Theme.OHO</item>
     </style>
+
+<!--    <style name="Theme.OHO.Launcher">-->
+<!--        <item name="android:windowBackground">@drawable/splash</item>-->
+<!--        <item name="android:windowSplashScreenBackground" tools:targetApi="s">@drawable/splash</item>-->
+<!--    </style>-->
 
     <style name="Theme.OHO.Reegistration">
         <item name="android:windowBackground">@drawable/login_background</item>
