--- a/app/src/main/res/layout/notification_collapsed.xml
+++ b/app/src/main/res/layout/notification_collapsed.xml
@@ -1,10 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="0dp"
+    android:layout_height="wrap_content">
+    <LinearLayout
+        android:id="@+id/layout_notification"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
-</LinearLayout>
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/textview_sender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="John Doe"
+                android:layout_marginEnd="@dimen/_10sdp"
+                style="@style/TextAppearance.Compat.Notification.Title" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textview_chat_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
+            android:maxLines="1"
+            style="@style/TextAppearance.Compat.Notification.Media" />
+    </LinearLayout>
+</RelativeLayout>
